[package]
name = "dgraph-conn"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.13", features = ["prost", "transport"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
deadpool = { version = "0.12", features = ["rt_tokio_1", "managed"]}
thiserror = "2"

[build-dependencies]
tonic-build = "0.13"